--- a/templates/after.html
+++ b/templates/after.html
@@ -7,10 +7,10 @@
         <h1> PREDICTION : </h1>
 
     {%if data == 0%}
-    <h1>default</h1>
+    <h1>will not default</h1>
     
     {%else%}
-    <h1>not default</h1>
+    <h1>will default</h1>
 
     {%endif%}
         <br><br>
