--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,12 @@
         <h1> default prediction <h1>
         
         <form method="POST", action="{{url_for('home')}}">
-            <b> First value : <input type="text", name='a', placeholder="enter 1"> <br><br>
-            Second value : <input type="text", name='b', placeholder="enter 2"> <br><br>
-            Third value : <input type="text", name='c', placeholder="enter 3"> <br><br>
-            Fourth value : <input type="text", name='d', placeholder="enter 4"> <br><br>
-            Fifth value : <input type="text", name='e', placeholder="enter 5"> <br><br>
-            Sixth value :  <input type="text", name='f', placeholder="enter 6"> <br><br></b>
+            <b> Gender : <input type="text", name='a', placeholder="enter 1"> <br><br>
+            Marital Status : <input type="text", name='b', placeholder="enter 2"> <br><br>
+            Age : <input type="text", name='c', placeholder="enter 3"> <br><br>
+            Bill Amount : <input type="text", name='d', placeholder="enter 4"> <br><br>
+            Education : <input type="text", name='e', placeholder="enter 5"> <br><br>
+            Payment :  <input type="text", name='f', placeholder="enter 6"> <br><br></b>
             <input type="submit" , value='predict' >
         </form>    
 
